--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "GPL-3.0-or-later",
   "description": "VTRPON2",
   "dependencies": {
+    "atem-connection": "^3.6.0",
     "fix-webm-duration": "^1.0.6",
     "fluent-ffmpeg": "^2.1.3",
     "node-fetch": "^3.3.2",
