--- a/package.json
+++ b/package.json
@@ -30,16 +30,35 @@
     "win": {
       "icon": "assets/icons/icon.ico"
     },
+    "mac": {
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ],
+      "icon": "assets/icons/icon_512x512.png"
+    },
     "extraResources": [
       {
         "from": "src/assets/ffmpeg.exe",
         "to": "ffmpeg.exe"
       },
       {
+        "from": "src/assets/ffmpeg",
+        "to": "ffmpeg"
+      },
+      {
         "from": "src/assets/ffprobe.exe",
         "to": "ffprobe.exe"
+      },
+      {
+        "from": "src/assets/ffprobe",
+        "to": "ffprobe"
       }
-    ],
-    "npmRebuild": false
+    ]
   }
 }
