--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "description": "VTRPON2",
   "dependencies": {
     "atem-connection": "^3.6.0",
+    "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "fix-webm-duration": "^1.0.6",
     "fluent-ffmpeg": "^2.1.3",
     "node-fetch": "^3.3.2",
@@ -45,24 +47,6 @@
         }
       ],
       "icon": "assets/icons/icon_512x512.png"
-    },
-    "extraResources": [
-      {
-        "from": "src/assets/ffmpeg.exe",
-        "to": "ffmpeg.exe"
-      },
-      {
-        "from": "src/assets/ffmpeg",
-        "to": "ffmpeg"
-      },
-      {
-        "from": "src/assets/ffprobe.exe",
-        "to": "ffprobe.exe"
-      },
-      {
-        "from": "src/assets/ffprobe",
-        "to": "ffprobe"
-      }
-    ]
+    }
   }
 }
