--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   },
   "build": {
     "appId": "pondashi.com-vtrpon",
+    "asarUnpack": [
+      "node_modules/ffmpeg-static/**",
+      "node_modules/ffprobe-static/**"
+    ],
     "win": {
       "icon": "assets/icons/icon.ico"
     },
