--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,12 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Python (with distutils)
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
       - name: Cache node modules (macOS)
         uses: actions/cache@v4
         with:
@@ -42,6 +48,12 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Python (with distutils)
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
       - name: Cache node modules (Windows)
         uses: actions/cache@v4
         with:
