Fix test pattern asset loading in packaged builds

--- a/package.json
+++ b/package.json
@@ -56,6 +56,12 @@
           "**/node_modules/ffmpeg-static/**",
           "**/node_modules/ffprobe-static/**"
         ],
+        "extraResources": [
+          {
+            "from": "assets",
+            "to": "assets"
+          }
+        ],
         "npmRebuild": false
     }
 }
