--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "electron-rebuild": "^3.2.9"
     },
     "overrides": {
-        "tar": "^7.5.8"
+        "tar": "^7.5.8",
+        "minimatch": "^10.2.1",
+        "ajv": "^6.14.0"
     },
     "build": {
         "appId": "pondashi.com-vtrpon",
