--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "winax": "^3.6.1"
     },
     "devDependencies": {
+        "@electron/rebuild": "^4.0.3",
         "electron": "^35.0.2",
         "electron-builder": "^24.3.0",
         "electron-rebuild": "^3.2.9"
@@ -43,29 +44,29 @@
     "build": {
         "appId": "pondashi.com-vtrpon",
         "win": {
-          "icon": "assets/icons/icon.ico"
+            "icon": "assets/icons/icon.ico"
         },
         "mac": {
-          "target": [
-            {
-              "target": "dmg",
-              "arch": [
-                "x64",
-                "arm64"
-              ]
-            }
-          ],
-          "icon": "assets/icons/icon_512x512.png"
+            "target": [
+                {
+                    "target": "dmg",
+                    "arch": [
+                        "x64",
+                        "arm64"
+                    ]
+                }
+            ],
+            "icon": "assets/icons/icon_512x512.png"
         },
         "asarUnpack": [
-          "**/node_modules/ffmpeg-static/**",
-          "**/node_modules/ffprobe-static/**"
+            "**/node_modules/ffmpeg-static/**",
+            "**/node_modules/ffprobe-static/**"
         ],
         "extraResources": [
-          {
-            "from": "assets",
-            "to": "assets"
-          }
+            {
+                "from": "assets",
+                "to": "assets"
+            }
         ],
         "npmRebuild": false
     }
